// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`#api > #search Elasticsearch query generation > query body snapshots > combined query, every filter, facets and sort 1`] = `
{
  "_source": [
    "resourceTitleObject.default",
    "resourceAbstractObject.default",
    "OrgForResourceObject.default",
    "resourceDate.date",
  ],
  "aggs": {
    "dataType": {
      "aggs": {
        "dataType": {
          "terms": {
            "field": "cl_spatialRepresentationType.default",
            "size": 50,
          },
        },
      },
      "filter": {
        "bool": {
          "filter": [
            {
              "terms": {
                "OrgForResourceObject.default": [
                  "Environment Agency",
                  "Natural England",
                ],
              },
            },
            {
              "terms": {
                "isOpenData": [
                  "true",
                ],
              },
            },
            {
              "terms": {
                "cl_maintenanceAndUpdateFrequency.default": [
                  "asNeeded",
                ],
              },
            },
            {
              "terms": {
                "cl_topic.default": [
                  "Environment",
                ],
              },
            },
            {
              "bool": {
                "minimum_should_match": 1,
                "should": [
                  {
                    "terms": {
                      "th_httpinspireeceuropaeutheme-theme.default": [
                        "Habitats and biotopes",
                      ],
                    },
                  },
                  {
                    "terms": {
                      "th_otherKeywords-theme.default": [
                        "Habitats and biotopes",
                      ],
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    },
    "owner": {
      "aggs": {
        "owner": {
          "terms": {
            "field": "OrgForResourceObject.default",
            "size": 50,
          },
        },
      },
      "filter": {
        "bool": {
          "filter": [
            {
              "terms": {
                "cl_spatialRepresentationType.default": [
                  "Grid",
                ],
              },
            },
            {
              "terms": {
                "isOpenData": [
                  "true",
                ],
              },
            },
            {
              "terms": {
                "cl_maintenanceAndUpdateFrequency.default": [
                  "asNeeded",
                ],
              },
            },
            {
              "terms": {
                "cl_topic.default": [
                  "Environment",
                ],
              },
            },
            {
              "bool": {
                "minimum_should_match": 1,
                "should": [
                  {
                    "terms": {
                      "th_httpinspireeceuropaeutheme-theme.default": [
                        "Habitats and biotopes",
                      ],
                    },
                  },
                  {
                    "terms": {
                      "th_otherKeywords-theme.default": [
                        "Habitats and biotopes",
                      ],
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    },
  },
  "from": 0,
  "post_filter": {
    "bool": {
      "filter": [
        {
          "terms": {
            "OrgForResourceObject.default": [
              "Environment Agency",
              "Natural England",
            ],
          },
        },
        {
          "terms": {
            "cl_spatialRepresentationType.default": [
              "Grid",
            ],
          },
        },
        {
          "terms": {
            "isOpenData": [
              "true",
            ],
          },
        },
        {
          "terms": {
            "cl_maintenanceAndUpdateFrequency.default": [
              "asNeeded",
            ],
          },
        },
        {
          "terms": {
            "cl_topic.default": [
              "Environment",
            ],
          },
        },
        {
          "bool": {
            "minimum_should_match": 1,
            "should": [
              {
                "terms": {
                  "th_httpinspireeceuropaeutheme-theme.default": [
                    "Habitats and biotopes",
                  ],
                },
              },
              {
                "terms": {
                  "th_otherKeywords-theme.default": [
                    "Habitats and biotopes",
                  ],
                },
              },
            ],
          },
        },
      ],
    },
  },
  "query": {
    "bool": {
      "filter": [
        {
          "bool": {
            "must": [
              {
                "nested": {
                  "path": "resourceDate",
                  "query": {
                    "range": {
                      "resourceDate.date": {
                        "gte": "2002-01-01T00:00:00.000Z",
                      },
                    },
                  },
                },
              },
            ],
            "must_not": [
              {
                "nested": {
                  "path": "resourceDate",
                  "query": {
                    "range": {
                      "resourceDate.date": {
                        "gte": "2005-01-01T00:00:00.000Z",
                      },
                    },
                  },
                },
              },
            ],
          },
        },
        {
          "geo_shape": {
            "geom": {
              "relation": "intersects",
              "shape": {
                "coordinates": [
                  -0.142,
                  51.501,
                ],
                "type": "point",
              },
            },
          },
        },
      ],
      "must": [
        {
          "multi_match": {
            "fields": [
              "resourceTitleObject.default^3",
              "resourceAbstractObject.default",
            ],
            "query": "flood",
            "type": "best_fields",
          },
        },
      ],
    },
  },
  "size": 10,
  "sort": [
    {
      "resourceDate.date": {
        "nested": {
          "path": "resourceDate",
        },
        "order": "desc",
      },
    },
  ],
}
`;

exports[`#api > #search Elasticsearch query generation > query body snapshots > empty input 1`] = `
{
  "_source": [
    "resourceTitleObject.default",
    "resourceAbstractObject.default",
    "OrgForResourceObject.default",
    "resourceDate.date",
  ],
  "from": 0,
  "query": {
    "match_all": {},
  },
  "size": 10,
  "sort": [
    {
      "_score": {
        "order": "desc",
      },
    },
  ],
}
`;

exports[`#api > #search Elasticsearch query generation > query body snapshots > sort by newest 1`] = `
{
  "_source": [
    "resourceTitleObject.default",
    "resourceAbstractObject.default",
    "OrgForResourceObject.default",
    "resourceDate.date",
  ],
  "from": 0,
  "query": {
    "match_all": {},
  },
  "size": 10,
  "sort": [
    {
      "resourceDate.date": {
        "nested": {
          "path": "resourceDate",
        },
        "order": "desc",
      },
    },
  ],
}
`;

exports[`#api > #search Elasticsearch query generation > query body snapshots > sort by titleAsc 1`] = `
{
  "_source": [
    "resourceTitleObject.default",
    "resourceAbstractObject.default",
    "OrgForResourceObject.default",
    "resourceDate.date",
  ],
  "from": 0,
  "query": {
    "match_all": {},
  },
  "size": 10,
  "sort": [
    {
      "resourceTitleObject.default.keyword": {
        "order": "asc",
      },
    },
  ],
}
`;
